html/gui/css/viewer.css
/* ... */
.display_type {
    background-image: url(../images/chart_bar.png) !important;
}
.layer {
    background-image: url(../images/layer.png) !important;
}
.stacking {
    background-image: url(../images/chart_bar_stacked.png) !important;
}
.line {
    background-image: url(../images/chart_line.png) !important;
}
.column {
    background-image: url(../images/chart_bar.png) !important;
}
.area {
    background-image: url(../images/chart_area.png) !important;
}
.areaspline {
    background-image: url(../images/chart_areaspline.png) !important;
}
.spline {
    background-image: url(../images/chart_spline.png) !important;
}
.pie {
    background-image: url(../images/chart_pie.png) !important;
}
.scatter {
    background-image: url(../images/chart_scatter.png) !important;
}
.color_management {
    background-image: url(../images/color_management.png) !important;
}
.loadsave {
    background-image: url(../images/loadsave.png) !important;
}
.chartoptions {
    background-image: url(../images/chartoptions.png) !important;
}
div.chart_thumb a {
	text-decoration: none;
}
.date_edit {
    background-image: url(../images/date_edit.png) !important;
    background-repeat: no-repeat;
}

.jobviewer_helpcontent {
    font-family: arial, "Times New Roman",Times,serif;
    font-size: 14px;
    color: black;
    width: 75%;
    background: white;
}

.jobviewer_helpcontent ul {
    list-style: square !important;
    padding-left: 30px;
}

.jobviewer_helpcontent strong {
    font-weight: bold;
}
.help-tip-body {
    padding-bottom: 7px !important;
    margin-top: 15px;
    margin-bottom:  10px;
    border: none !important;
}
.base-help-tip {
    background-color: #E9F3FF;
    padding: 5px;
    border: 1px solid #bbb;
    font: normal 12px tahoma, arial, helvetica, sans-serif;
    color: #31383D;
}
.base-help-tip-bbar {
    background-color: #E9F3FF;
    color: #31383D;
}
.base-help-tip-bbar .x-toolbar {
    background-color: #e9f3ff;
    color: #31383D;
    background-image: none;
    border: none;
}
.x-spotlight {
    opacity: .65 !important;
}
.next-help-tip, .previous-help-tip, .end-help-tip-tour {
    border: 1px solid black;
    padding: 3px 10px;
    background-color: #BAC2CC;
    border-radius: 5px;

}
.next-help-tip button, .previous-help-tip button, .end-help-tip-tour button, .base-help-tip-header-text {
    font-weight: bold;
    font-size: 12px;
}
.help-tip-button {
    background-color: #4E6480;
}
.help-tip-button button {
    color: #E8F4FF !important;
}
.help-tip-button .x-btn-tl, .help-tip-button .x-btn-tr, .help-tip-button .x-btn-tc, .help-tip-button .x-btn-ml,
.help-tip-button .x-btn-mr, .help-tip-button .x-btn-mc, .help-tip-button .x-btn-bl, .help-tip-button .x-btn-br,
.help-tip-button .x-btn-bc{
    background: none !important;
}

